# tauri-store

./: .gitattributes  .gitignore  .prettierignore  .prettierrc.json  .taurignore  Cargo.toml  LICENSE  README.md  eslint.config.js  eslint.config.ts  miho.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  tsconfig.json
crates/cli/: Cargo.toml  README.md
crates/cli/assets/: commands.rs  commands.ts
crates/cli/src/: package.rs  path.rs
crates/cli/src/command/: codegen.rs  mod.rs
crates/plugin-pinia/: Cargo.toml  README.md  build.rs
crates/plugin-pinia/android/: .gitignore  build.gradle.kts
crates/plugin-pinia/ios/: Package.swift
crates/plugin-pinia/ios/Sources/: PiniaPlugin.swift
crates/plugin-pinia/permissions/: default.toml
crates/plugin-pinia/permissions/autogenerated/: reference.md
crates/plugin-pinia/permissions/schemas/: schema.json
crates/plugin-pinia/src/: lib.rs  manager.rs  pinia.rs
crates/plugin-pinia/src/command/: autogenerated.rs
crates/plugin-svelte/: Cargo.toml  README.md
crates/plugin-svelte/android/: build.gradle.kts
crates/plugin-svelte/ios/: Package.swift
crates/plugin-svelte/ios/Sources/: SveltePlugin.swift
crates/plugin-svelte/permissions/: default.toml
crates/plugin-svelte/permissions/autogenerated/: reference.md
crates/plugin-svelte/permissions/schemas/: schema.json
crates/plugin-svelte/src/: lib.rs  manager.rs  svelte.rs
crates/plugin-svelte/src/command/: autogenerated.rs
crates/plugin-valtio/: Cargo.toml  README.md  build.rs
crates/plugin-valtio/android/: build.gradle.kts  setting.gradle
crates/plugin-valtio/ios/: Package.swift
crates/plugin-valtio/ios/Sources/: ValtioPlugin.swift
crates/plugin-valtio/permissions/: default.toml
crates/plugin-valtio/permissions/autogenerated/: reference.md
crates/plugin-valtio/permissions/schemas/: schema.json
crates/plugin-valtio/src/: Package.swift  build.gradle.kts  lib.rs  manager.rs  valtio.rs
crates/plugin-valtio/src/command/: autogenerated.rs
crates/plugin-vue/: Cargo.toml  README.md
crates/plugin-vue/android/: build.gradle.kts  proguard-rules.pro
crates/plugin-vue/ios/: Package.swift
crates/plugin-vue/ios/Sources/: VuePlugin.swift
crates/plugin-vue/permissions/: default.toml
crates/plugin-vue/permissions/autogenerated/: reference.md
crates/plugin-vue/permissions/schemas/: schema.json
crates/plugin-vue/src/: lib.rs  manager.rs  vue.rs
crates/plugin-vue/src/command/: autogenerated.rs
crates/plugin-zustand/: Cargo.toml  README.md  build.rs
crates/plugin-zustand/android/: build.gradle.kts
crates/plugin-zustand/ios/: Package.swift
crates/plugin-zustand/ios/Sources/: ZustandPlugin.swift
crates/plugin-zustand/permissions/: default.toml
crates/plugin-zustand/permissions/autogenerated/: reference.md
crates/plugin-zustand/permissions/schemas/: schema.json
crates/plugin-zustand/src/: lib.rs  manager.rs  zustand.rs
crates/plugin-zustand/src/command/: autogenerated.rs
crates/tauri-plugin-pinia/: Cargo.toml  README.md  build.rs
crates/tauri-plugin-pinia/permissions/: default.toml
crates/tauri-plugin-pinia/permissions/autogenerated/: reference.md
crates/tauri-plugin-pinia/permissions/schemas/: schema.json
crates/tauri-plugin-pinia/src/: command.rs  lib.rs  manager.rs  pinia.rs
crates/tauri-plugin-pinia/src/command/: autogenerated.rs
crates/tauri-plugin-svelte/: Cargo.toml  README.md  build.rs
crates/tauri-plugin-svelte/permissions/: default.toml
crates/tauri-plugin-svelte/permissions/autogenerated/: reference.md
crates/tauri-plugin-svelte/permissions/schemas/: schema.json
crates/tauri-plugin-svelte/src/: lib.rs  manager.rs  svelte.rs
crates/tauri-plugin-svelte/src/command/: autogenerated.rs  mod.rs
crates/tauri-store/: Cargo.toml  README.md  build.rs
crates/tauri-store-cli/: Cargo.toml  README.md
crates/tauri-store-cli/assets/: commands.rs  commands.ts  lib.rs  manager.rs
crates/tauri-store-cli/assets/android/: build.gradle.kts
crates/tauri-store-cli/assets/changelog/: version.svelte
crates/tauri-store-cli/src/: command.rs  fs.rs  main.rs  manifest.rs  package.rs  path.rs  plugin.rs  process.rs  target.rs  transform.rs
crates/tauri-store-macros/: Cargo.toml  README.md
crates/tauri-store-macros/src/: collection.rs  collection_builder.rs  lib.rs
crates/tauri-store-utils/: Cargo.toml  README.md
crates/tauri-store-utils/src/: fs.rs  lib.rs  manager.rs  sync.rs  task.rs  time.rs  version.rs
crates/tauri-store-wasm/: Cargo.toml
crates/tauri-store-wasm/src/: lib.rs  store.rs
crates/tauri-store/android/: build.gradle.kts
crates/tauri-store/assets/: manifest.xml
crates/tauri-store/ios/: Package.swift  README.md
crates/tauri-store/permissions/: default.toml
crates/tauri-store/src/: autosave.rs  collection.rs  error.rs  event.rs  lib.rs  listener.rs  manager.rs  meta.rs  migration.rs  plugin.rs  prelude.rs  state.rs  store.rs  watch.rs
crates/tauri-store/src/store/: id.rs  (+8 more)
crates/tauri-store/tests/: collection.rs  store.rs
examples/nuxt/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
examples/pinia-mobile/src-tauri/: Cargo.toml  tauri.conf.json
examples/pinia-nuxt/src-tauri/: Cargo.toml  tauri.conf.json
examples/pinia/src-tauri/: Cargo.toml  tauri.conf.json
examples/playground/src-tauri/: Cargo.toml  tauri.conf.json
examples/shared/: Cargo.toml
examples/shared-rs/: Cargo.toml
examples/shared-rs/src/: lib.rs
examples/shared/assets/: style.css
examples/shared/javascript/: package.json
examples/shared/pinia/: package.json  tsconfig.json
examples/shared/react/: package.json  tsconfig.json
examples/shared/rust/: Cargo.toml
examples/shared/src/: lib.rs
examples/shared/vue/: package.json
examples/svelte/src-tauri/: Cargo.toml  tauri.conf.json
examples/valtio/src-tauri/: Cargo.toml  tauri.conf.json
plugin/: Cargo.toml  build.rs
plugin/permissions/: default.toml
plugin/permissions/autogenerated/: reference.md
plugin/permissions/schemas/: schema.json
plugin/src/: command.rs  error.rs  lib.rs  manager.rs  pinia.rs  prelude.rs  store.rs
(+772 files in other folders)
