[workspace]
resolver = "2"
members = [
  "crates/*",
  "examples/pinia-nuxt/src-tauri",
  "examples/pinia/src-tauri",
  "examples/playground/src-tauri",
  "examples/svelte-runes/src-tauri",
  "examples/svelte/src-tauri",
  "examples/valtio/src-tauri",
  "examples/vanilla/src-tauri",
]

[workspace.package]
edition = "2021"
rust-version = "1.77.2"
categories = ["filesystem", "gui", "web-programming"]

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(tauri_store_tracing)']

[workspace.lints.clippy]
clone_on_ref_ptr = "deny"
filetype_is_file = "deny"
map_unwrap_or = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_safety_doc = "deny"
module_name_repetitions = "allow"
must_use_candidate = "allow"
rc_buffer = "deny"
rc_mutex = "deny"
rest_pat_in_fully_bound_structs = "deny"
single_match_else = "allow"

[workspace.lints.clippy.pedantic]
level = "deny"
priority = -1
