[workspace]
resolver = "2"
members = [
  "crates/plugin-pinia",
  "crates/plugin-svelte",
  "crates/plugin-valtio",
  "crates/plugin-vue",
  "crates/plugin-zustand",
  "crates/tauri-store",
  "crates/tauri-store-cli",
  "crates/tauri-store-macros",
  "crates/tauri-store-utils",
  "examples/migration/src-tauri",
  "examples/pinia-mobile/src-tauri",
  "examples/pinia-nuxt/src-tauri",
  "examples/pinia/src-tauri",
  "examples/playground/src-tauri",
  "examples/svelte-runes/src-tauri",
  "examples/svelte/src-tauri",
  "examples/valtio/src-tauri",
  "examples/vanilla/src-tauri",
  "examples/vue/src-tauri",
  "examples/zustand/src-tauri",
]

[workspace.package]
edition = "2021"
rust-version = "1.77.2"
categories = ["filesystem", "gui", "web-programming"]

[workspace.dependencies]
anyhow = "1.0"
bon = "3.9"
colored = "3.1"
convert_case = "0.11"
ciborium = "0.2"
dashmap = "6.1"
futures = "0.3"
itertools = "0.14"
parking_lot = "0.12"
proc-macro2 = "1.0"
quote = "1.0"
rand = "0.10"
ron = "0.12"
serde = "1.0"
serde_json = "1.0"
syn = "2.0"
tauri = "2"
thiserror = "2.0"
toml = "1.0"

[workspace.dependencies.clap]
version = "4.5"
features = ["derive"]

[workspace.dependencies.derive_more]
version = "2.1"
features = ["deref"]

[workspace.dependencies.indexmap]
version = "2.13.0"
features = ["serde"]

[workspace.dependencies.semver]
version = "1.0"
features = ["serde"]

[workspace.dependencies.strum]
version = "0.28"
features = ["derive"]

[workspace.dependencies.tokio]
version = "1.47"
default-features = false

[workspace.lints.clippy]
clone_on_ref_ptr = "deny"
filetype_is_file = "deny"
incompatible_msrv = "deny"
map_unwrap_or = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_safety_doc = "deny"
module_name_repetitions = "allow"
must_use_candidate = "allow"
needless_for_each = "allow"
rc_buffer = "deny"
rc_mutex = "deny"
rest_pat_in_fully_bound_structs = "deny"
single_match_else = "allow"

[workspace.lints.clippy.pedantic]
level = "deny"
priority = -1

[profile.release-cli]
inherits = "release"
codegen-units = 1
lto = "fat"
opt-level = 3
strip = "symbols"
panic = "abort"
