[package]
name = "tauri-plugin-pinia"
description = "Persistent Pinia stores for Tauri"
version = "0.1.1"
links = "tauri-plugin-pinia"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
serde = "1.0.204"
serde_json = "1.0.120"
tauri = "2.0.0-beta.24"
thiserror = "1.0.63"
tracing = "0.1.40"

[dependencies.ahash]
version = "0.8.11"
optional = true

[build-dependencies.tauri-plugin]
version = "2.0.0-beta.19"
features = ["build"]

[features]
ahash = ["dep:ahash", "ahash/serde"]
