[package]
name = "tauri-plugin-pinia"
description = "Persistent Pinia stores for Tauri"
version = "0.2.0"
documentation = "https://docs.rs/tauri-plugin-pinia"
homepage = "https://github.com/ferreira-tb/tauri-plugin-pinia"
repository = "https://github.com/ferreira-tb/tauri-plugin-pinia"
authors = ["Andrew Ferreira <andrew.shien2@gmail.com>"]
license = "MIT"
readme = "../README.md"
keywords = ["plugin", "tauri", "tauri-plugin", "vue", "pinia"]
links = "tauri-plugin-pinia"

[lints]
workspace = true

[package.edition]
workspace = true

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
serde = "1.0"
serde_json = "1.0"
tauri = "2.0.0-beta.24"
thiserror = "1.0"

[dependencies.ahash]
version = "0.8"
optional = true

[dependencies.tracing]
version = "0.1"
optional = true

[build-dependencies.tauri-plugin]
version = "2.0.0-beta.19"
features = ["build"]

[features]
ahash = ["dep:ahash", "ahash/serde"]
tracing = ["dep:tracing"]
