[package]
name = "tauri-plugin-pinia"
description = "Persistent Pinia stores for Tauri"
version = "0.4.2"
documentation = "https://docs.rs/tauri-plugin-pinia"
homepage = "https://tb.dev.br/tauri-plugin-pinia"
repository = "https://github.com/ferreira-tb/tauri-plugin-pinia"
authors = ["Andrew Ferreira <andrew.shien2@gmail.com>"]
license = "MIT"
readme = "../README.md"
keywords = ["plugin", "tauri", "tauri-plugin", "vue", "pinia"]
links = "tauri-plugin-pinia"

[package.edition]
workspace = true

[package.metadata.docs.rs]
no-default-features = true
features = ["async-pinia"]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
serde = "1.0"
serde_json = "1.0"
tauri = "2.0.0-rc.0"
thiserror = "1.0"

[dependencies.ahash]
version = "0.8"
optional = true

[dependencies.tracing]
version = "0.1"
optional = true

[dependencies.tokio]
version = "1.39"
optional = true
default-features = false
features = ["fs", "io-util", "time"]

[build-dependencies.tauri-plugin]
version = "2.0.0-rc.0"
features = ["build"]

[features]
async-pinia = ["tokio"]
ahash = ["dep:ahash", "ahash/serde"]
tracing = ["dep:tracing"]
tokio = ["dep:tokio"]
