[package]
name = "tauri-store-cli"
version = "0.1.0"
description = "Command line tools for the Tauri Store repository"
publish = false

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0"
convert_case = "0.6"
regex = "1.11"

[dependencies.clap]
version = "4.5"
features = ["derive"]

[dependencies.strum]
version = "0.26"
features = ["derive"]
