[package]
name = "tauri-plugin-svelte"
description = "Persistent Svelte stores for Tauri"
version = "3.2.0"
documentation = "https://docs.rs/tauri-plugin-svelte"
homepage = "https://tb.dev.br/tauri-store/plugin-svelte/guide/getting-started"
repository = "https://github.com/ferreira-tb/tauri-store"
authors = ["Andrew Ferreira <andrew.shien2@gmail.com>"]
license = "MIT"
readme = "./README.md"
keywords = ["plugin", "store", "svelte", "tauri"]
links = "tauri-plugin-svelte"

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[package.categories]
workspace = true

[package.metadata.docs.rs]
no-default-features = true
features = ["marshaler-cbor", "marshaler-ron", "marshaler-toml"]

[lints]
workspace = true

[dependencies]
serde.workspace = true
tauri.workspace = true

[dependencies.tauri-store]
version = "1"
path = "../tauri-store"
default-features = false
features = ["derive"]

[build-dependencies.tauri-plugin]
version = "2.4"
features = ["build"]

[features]
file-sync-all = ["tauri-store/file-sync-all"]

marshaler-cbor = ["tauri-store/marshaler-cbor"]
marshaler-ron = ["tauri-store/marshaler-ron"]
marshaler-toml = ["tauri-store/marshaler-toml"]

preserve-order = ["tauri-store/preserve-order"]
