[package]
name = "tauri-plugin-zustand"
description = "Persistent Zustand stores for Tauri"
version = "0.0.2"
documentation = "https://docs.rs/tauri-plugin-zustand"
homepage = "https://tb.dev.br/tauri-store/plugin-zustand/guide/getting-started"
repository = "https://github.com/ferreira-tb/tauri-store"
authors = ["Andrew Ferreira <andrew.shien2@gmail.com>"]
license = "MIT"
readme = "./README.md"
keywords = ["plugin", "react", "store", "tauri", "zustand"]
links = "tauri-plugin-zustand"

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[package.categories]
workspace = true

[package.metadata.docs.rs]
no-default-features = true
features = ["unstable-migration"]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
serde = "1.0"
tauri = "2"

[dependencies.tauri-store]
version = "0.10"
path = "../tauri-store"
default-features = false
features = ["derive"]

[target."cfg(tauri_store_tracing)".dependencies]
tracing = "0.1"

[build-dependencies.tauri-plugin]
version = "2.0"
features = ["build"]

[features]
file-sync-all = ["tauri-store/file-sync-all"]
unstable-migration = ["tauri-store/unstable-migration"]
