[package]
name = "tauri-plugin-pinia"
description = "Persistent Pinia stores for Tauri"
version = "0.9.0"
documentation = "https://docs.rs/tauri-plugin-pinia"
homepage = "https://tb.dev.br/tauri-store"
repository = "https://github.com/ferreira-tb/tauri-store"
authors = ["Andrew Ferreira <andrew.shien2@gmail.com>"]
license = "MIT"
readme = "./README.md"
keywords = ["plugin", "tauri", "vue", "pinia", "nuxt"]
links = "tauri-plugin-pinia"

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[package.metadata.docs.rs]
no-default-features = true
features = []
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
serde = "1.0"
tauri = "2"

[dependencies.tauri-store]
version = "0.4"
path = "../tauri-store"
features = ["derive"]

[target.'cfg(tauri_store_tracing)'.dependencies]
tracing = "0.1"

[build-dependencies.tauri-plugin]
version = "2.0"
features = ["build"]

[features]
file-sync-all = ["tauri-store/file-sync-all"]
unstable-async = ["tauri-store/unstable-async"]
