[[bin]]
name = "ts"
path = "src/main.rs"

[package]
name = "tauri-store-cli"
description = "Command line tools for tauri-store"
version = "1.0.0"
publish = false
rust-version = "1.85"
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow = "1.0"
bon = "3.8"
colored = "3.1"
convert_case = "0.11"
itertools = "0.14"
rand = "0.9"

[dependencies.clap]
version = "4.5"
features = ["derive"]

[dependencies.derive_more]
version = "2.1"
features = ["deref"]

[dependencies.strum]
version = "0.27"
features = ["derive"]
