[[bin]]
name = "ts"
path = "src/main.rs"

[package]
name = "tauri-store-cli"
description = "Command line tools for tauri-store"
version = "1.0.0"
publish = false
rust-version = "1.93"
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
bon.workspace = true
clap.workspace = true
colored.workspace = true
convert_case.workspace = true
derive_more.workspace = true
itertools.workspace = true
rand.workspace = true
strum.workspace = true
