[package]
name = "tauri-store-macros"
description = "Persistent stores for Tauri"
version = "1.2.1"
documentation = "https://docs.rs/tauri-store"
homepage = "https://tb.dev.br/tauri-store"
repository = "https://github.com/ferreira-tb/tauri-store"
authors = ["Andrew Ferreira <andrew.shien2@gmail.com>"]
license = "MIT"
readme = "./README.md"
keywords = ["plugin", "store", "tauri"]

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[package.categories]
workspace = true

[package.metadata.docs.rs]
no-default-features = true
features = []

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
