[package]
name = "tauri-store-utils"
description = "Utilities for the Tauri store"
version = "0.6.0"
documentation = "https://docs.rs/tauri-store-utils"
homepage = "https://tb.dev.br/tauri-store"
repository = "https://github.com/ferreira-tb/tauri-store"
authors = ["Andrew Ferreira <andrew.shien2@gmail.com>"]
license = "MIT"
readme = "./README.md"
keywords = ["plugin", "store", "tauri"]

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[package.categories]
workspace = true

[package.metadata.docs.rs]
no-default-features = true
features = ["version"]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
bon = "3.7"
serde_json = "1.0"
tauri = "2"
thiserror = "2.0"

[dependencies.semver]
version = "1.0"
optional = true
default-features = false

[dependencies.serde]
version = "1.0"
default-features = false

[dependencies.tokio]
version = "1.39"
default-features = false
features = ["macros", "time"]

[features]
version = ["dep:semver"]
