[package]
name = "tauri-store-utils"
description = "Utilities for the Tauri store"
version = "0.7.0"
documentation = "https://docs.rs/tauri-store-utils"
homepage = "https://tb.dev.br/tauri-store"
repository = "https://github.com/ferreira-tb/tauri-store"
authors = ["Andrew Ferreira <andrew.shien2@gmail.com>"]
license = "MIT"
readme = "./README.md"
keywords = ["plugin", "store", "tauri"]

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[package.categories]
workspace = true

[package.metadata.docs.rs]
no-default-features = true
features = ["version"]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
parking_lot = "0.12"
semver = "1.0"
tauri = "2"
thiserror = "2.0"

[dependencies.tokio]
version = "1.47"
default-features = false
features = ["macros", "time"]
