[package]
name = "tauri-store-utils"
description = "Utilities for the Tauri store"
version = "0.7.2"
documentation = "https://docs.rs/tauri-store-utils"
homepage = "https://tb.dev.br/tauri-store"
repository = "https://github.com/ferreira-tb/tauri-store"
authors = ["Andrew Ferreira <andrew.shien2@gmail.com>"]
license = "MIT"
readme = "./README.md"
keywords = ["plugin", "store", "tauri"]

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[package.categories]
workspace = true

[package.metadata.docs.rs]
no-default-features = true
features = []

[lints]
workspace = true

[dependencies]
parking_lot.workspace = true
semver.workspace = true
tauri.workspace = true
thiserror.workspace = true

[dependencies.tokio]
workspace = true
features = ["macros", "time"]
