[package]
name = "tauri-store-wasm"
version = "0.1.0"
homepage = "https://tb.dev.br/tauri-store"
repository = "https://github.com/ferreira-tb/tauri-store"
authors = ["Andrew Ferreira <andrew.shien2@gmail.com>"]
license = "MIT"
publish = false

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
wasm-bindgen = "0.2"
