[package]
name = "tauri-store"
description = "Persistent stores for Tauri"
version = "1.2.1"
documentation = "https://docs.rs/tauri-store"
homepage = "https://tb.dev.br/tauri-store"
repository = "https://github.com/ferreira-tb/tauri-store"
authors = ["Andrew Ferreira <andrew.shien2@gmail.com>"]
license = "MIT"
readme = "./README.md"
keywords = ["plugin", "store", "tauri"]
links = "tauri-store"

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[package.categories]
workspace = true

[package.metadata.docs.rs]
no-default-features = true
features = ["marshaler-cbor", "marshaler-ron", "marshaler-toml", "plugin"]

[lints]
workspace = true

[dependencies]
dashmap.workspace = true
futures.workspace = true
itertools.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
thiserror.workspace = true

[dependencies.tauri-store-macros]
version = "1"
optional = true
path = "../tauri-store-macros"

[dependencies.tauri-store-utils]
version = "0.7"
path = "../tauri-store-utils"

[dependencies.tokio]
workspace = true
features = ["time"]

[dependencies.ciborium]
workspace = true
optional = true

[dependencies.indexmap]
workspace = true
optional = true

[dependencies.ron]
workspace = true
optional = true

[dependencies.toml]
workspace = true
optional = true

[build-dependencies.tauri-plugin]
version = "2.4"
optional = true
features = ["build"]

[dev-dependencies]
anyhow.workspace = true

[dev-dependencies.tauri]
version = "2"
features = ["test"]

[features]
default = ["plugin"]
plugin = ["dep:tauri-plugin"]
derive = ["dep:tauri-store-macros"]

file-sync-all = []

marshaler-cbor = ["dep:ciborium"]
marshaler-ron = ["dep:ron"]
marshaler-toml = ["dep:toml"]

preserve-order = [
  "dep:indexmap",
  "serde_json/preserve_order",
  "ron?/indexmap",
  "toml?/preserve_order",
]
