[package]
name = "example-shared"
version = "0.9.0"
publish = false

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0"
serde_json = "1.0"
tauri-plugin-process = "2.2"
tauri-plugin-shell = "2.2"
tauri-plugin-window-state = "2.2"
tracing = "0.1"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tauri]
version = "2"
features = ["devtools", "protocol-asset"]

[dependencies.tauri-plugin-pinia]
path = "../../crates/tauri-plugin-pinia"
default-features = false
optional = true

[dependencies.tauri-store]
path = "../../crates/tauri-store"
default-features = false

[dependencies.tokio]
version = "1.42"
features = ["full"]

[dependencies.tracing-subscriber]
version = "0.3"
features = ["chrono", "env-filter", "fmt", "parking_lot", "registry"]

[build-dependencies.tauri-build]
version = "2.0"
features = []

[features]
pinia = ["dep:tauri-plugin-pinia"]
file-sync-all = ["tauri-store/file-sync-all"]
unstable-async = ["tauri-store/unstable-async"]
