[package]
name = "example-nuxt"
version = "0.9.0"
publish = false

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[lints]
workspace = true

[build-dependencies.tauri-build]
version = "2.0"
features = []

[dependencies]
anyhow = "1.0"
serde_json = "1.0"
tauri-plugin-process = "2.2"
tauri-plugin-shell = "2.2"
tauri-plugin-window-state = "2.2"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.example-shared]
path = "../../shared"
features = ["pinia"]

[dependencies.tauri]
version = "2"
features = ["devtools", "protocol-asset"]

[dependencies.tauri-plugin-pinia]
path = "../../../crates/tauri-plugin-pinia"
default-features = false

[features]
ahash = ["example-shared/ahash"]
file-sync-all = ["example-shared/file-sync-all"]
unstable-async = ["example-shared/unstable-async"]
