[package]
name = "example-pinia-mobile"
publish = false
version = "0.1.0"

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[lib]
name = "example_pinia_mobile_lib"
crate-type = ["cdylib", "rlib", "staticlib"]

[lints]
workspace = true

[dependencies]
anyhow = "1"
serde_json = "1"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tauri]
version = "2"
features = ["devtools", "protocol-asset"]

[dependencies.tauri-plugin-pinia]
path = "../../../crates/plugin-pinia"
default-features = false

[build-dependencies.tauri-build]
version = "2"
features = []
